swagger: user profile; getting user profile
